# dbundone

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  supabase-schema.sql  tailwind.config.js  tsconfig.json  tsconfig.main.json  vite.config.ts  vitest.config.ts
.clinerules/: workspacerules.md
assets/: README.md
assets/flps/: BASS.flp  Project_1.flp  Project_31.flp  Project_4.flp
assets/flps/Backup/: Project_1 (overwritten at 8h01).flp
dbundone-vst/: .gitignore  Cargo.toml
dbundone-vst/plugins/dbundone-bridge/: Cargo.toml
dbundone-vst/plugins/dbundone-bridge/src/: lib.rs  protocol.rs  recorder.rs  ws_client.rs
pvls-player/: next.config.ts  package-lock.json  package.json  supabase-schema.sql
pvls-player/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
pvls-player/.next/cache/: .previewinfo  .rscinfo  chrome-devtools-workspace-uuid
pvls-player/.next/server/: app-paths-manifest.json  middleware-build-manifest.js  middleware-manifest.json  server-reference-manifest.json  webpack-runtime.js
pvls-player/.next/types/: routes.d.ts  validator.ts
pvls-player/public/: manifest.json  sw.js
pvls-player/src/app/: globals.css  layout.tsx  page.tsx
pvls-player/src/components/: NowPlaying.tsx  PlayerBar.tsx  PlaylistSidebar.tsx  RatingStars.tsx  SettingsModal.tsx  SongCard.tsx  SongLibrary.tsx  SongModal.tsx
pvls-player/src/hooks/: useAuth.ts  useLibrary.ts  usePlayer.ts  useSettings.ts
pvls-player/src/lib/: config.ts  db.ts  msauth.ts  onedrive.ts  supabase.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_analysis.rs  commands.rs  database.rs  flp_parser.rs  lib.rs  scanner.rs  websocket.rs
src/main/: database.ts  main.ts  main_new.ts  main_old.ts  preload.ts  workerPool.ts  workerThread.js
src/renderer/: App.css  App.tsx  global.d.ts  index.html  main.tsx  test.py  test_old.py
src/shared/: types.d.ts  types.d.ts.map  types.js  types.js.map  types.ts
website/: .env.example  README.md  next-sitemap.config.js  package-lock.json  package.json
website/public/: robots.txt  sitemap-0.xml  sitemap.xml
website/src/: middleware.ts
(+203 files in other folders)
